--- a/about-us.html
+++ b/about-us.html
@@ -16,13 +16,21 @@
                     <img src="images/logo/logo.jpg" alt="Nest Africa Travels Ltd Logo" class="logo-img">
                     <span>Nest Africa Travels Ltd</span>
                 </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="index.html#tours" class="nav-link">Tours</a></li>
-                    <li><a href="about-us.html" class="nav-link active">About</a></li>
-                    <li><a href="index.html#contact" class="nav-link">Contact</a></li>
-                    <li><a href="index.html#blog" class="nav-link">Blog</a></li>
-                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <nav class="nav-menu">
+                    <ul class="nav-list">
+                        <li><a href="index.html" class="nav-link">Home</a></li>
+                        <li><a href="index.html#tours" class="nav-link">Tours</a></li>
+                        <li><a href="about-us.html" class="nav-link active">About Us</a></li>
+                        <li><a href="index.html#services" class="nav-link">Services</a></li>
+                        <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                        <li><a href="index.html#blog" class="nav-link">Blog</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
