--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         })();
     </script>
 </head>
-<body>
+<body class="landing-page">
     <!-- Top Contact Bar -->
     <div class="top-contact-bar">
         <div class="container">
@@ -153,7 +153,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <h2 class="section-title">Core Travel Services</h2>
             <div class="services-grid">
@@ -412,41 +412,41 @@
         <div class="container">
             <div class="testimonials-header">
                 <span class="testimonials-label">TESTIMONIALS</span>
-                <h2 class="testimonials-title">Take a Look at What Our Amazing<br>Clients Have said</h2>
+                <h2 class="testimonials-title">Client Reviews</h2>
             </div>
             <div class="testimonials-grid">
                 <div class="testimonial-card-new">
                     <div class="testimonial-number">1</div>
-                    <p class="testimonial-quote">"Consultra helped us reach our business potential. They are our go-to business consultants!"</p>
+                    <p class="testimonial-quote">"Our corporate team-building trip to Akagera National Park was expertly organized by Nest Africa Travels. Their attention to detail and professional service made our experience unforgettable!"</p>
                     <div class="testimonial-author">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Jean Dodge" class="author-avatar">
+                        <img src="https://images.unsplash.com/photo-1539701938214-0d9736e1c16b?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Mugisha Patrick" class="author-avatar">
                         <div class="author-info">
-                            <h4>Jean Dodge</h4>
-                            <span>CEO The Wild Guys</span>
+                            <h4>Mugisha Patrick</h4>
+                            <span>Client</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="testimonial-card-new">
                     <div class="testimonial-number">2</div>
-                    <p class="testimonial-quote">"Consultra helped me through a difficult time with my staff. Because of them I made the best decisions for the team"</p>
+                    <p class="testimonial-quote">"Urugendo rwacu rwo gusura ingagi za Pariki ya Volcans rwari rufite agaciro kanini. Nest Africa Travels baradufashije cyane, batugiriye inama kandi baduha serivisi nziza cyane. Murakoze cyane!"</p>
                     <div class="testimonial-author">
-                        <img src="https://images.unsplash.com/photo-1494790108755-2616c93f30b9?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Johan Steen" class="author-avatar">
+                        <img src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Uwase Marie Claire" class="author-avatar">
                         <div class="author-info">
-                            <h4>Johan Steen</h4>
-                            <span>CEO The Restaurant</span>
+                            <h4>Uwase Marie Claire</h4>
+                            <span>Client</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="testimonial-card-new">
                     <div class="testimonial-number">3</div>
-                    <p class="testimonial-quote">"Consultra literally shaped up our entire operation. Without them we wouldn't have been so successful. Thank you!"</p>
+                    <p class="testimonial-quote">"As a tour operator from Kenya, partnering with Nest Africa Travels for our Rwanda packages has been incredible. Their local expertise and commitment to excellence is unmatched. They handled our Nyungwe Forest tours perfectly!"</p>
                     <div class="testimonial-author">
-                        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Marlene Smith" class="author-avatar">
+                        <img src="https://images.unsplash.com/photo-1507152832244-10d45c7eda57?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" alt="Kamaliza Jean" class="author-avatar">
                         <div class="author-info">
-                            <h4>Marlene Smith</h4>
-                            <span>CEO Big Brands</span>
+                            <h4>Kamaliza Jean</h4>
+                            <span>Client</span>
                         </div>
                     </div>
                 </div>
