--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <a href="about-us.html" class="cta-button">READ MORE</a>
                 </div>
                 <div class="about-image">
-                    <img src="images/about/about1.jpg" alt="Kayaking Adventure" />
+                    <img src="images/about/about2.jpg" alt="Kayaking Adventure" />
                 </div>
             </div>
         </div>
@@ -225,7 +225,7 @@
         <div class="container">
             <div class="why-choose-layout">
                 <div class="why-choose-image">
-                    <img src="images/about/about1.jpg" alt="Travel Experience" />
+                    <img src="images/about/about2.jpg" alt="Travel Experience" />
                 </div>
                 <div class="why-choose-content">
                     <h2 class="why-choose-title">Why Choose Us</h2>
@@ -274,7 +274,7 @@
                 </button>
                 <div class="blog-track" id="blogTrack">
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Mountain Hiking" />
+                        <img src="images/blog/mount karisimbi.png" alt="Mount Karisimbi Hiking" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">August 8, 2025</span>
@@ -287,7 +287,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Cultural Heritage" />
+                        <img src="images/blog/rwanda rich cultural heritage.png" alt="Cultural Heritage" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">August 5, 2025</span>
@@ -300,7 +300,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Kigali City" />
+                        <img src="images/blog/kigali city.png" alt="Kigali City" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">August 3, 2025</span>
@@ -313,7 +313,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Lake Kivu" />
+                        <img src="images/blog/lake kivu.png" alt="Lake Kivu" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 30, 2025</span>
@@ -326,7 +326,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Nyungwe Forest" />
+                        <img src="images/blog/nyungwe forest.png" alt="Nyungwe Forest" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 28, 2025</span>
@@ -339,7 +339,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1516815231560-8f41ec531527?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Wildlife Safari" />
+                        <img src="images/blog/akagera natinal park.png" alt="Wildlife Safari" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 25, 2025</span>
@@ -352,7 +352,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1523805009345-7448845a9e53?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Local Food" />
+                        <img src="images/blog/Taste of Rwanda .png" alt="Local Food" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 22, 2025</span>
@@ -365,7 +365,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1533587851505-d119e13fa0d7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Biking Tours" />
+                        <img src="images/blog/Congo nile.png" alt="Biking Tours" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 20, 2025</span>
@@ -378,7 +378,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1452873867668-7325bd9f4438?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Bird Watching" />
+                        <img src="images/blog/birds watching.png" alt="Bird Watching" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 18, 2025</span>
@@ -391,7 +391,7 @@
                     </article>
 
                     <article class="blog-card">
-                        <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Sustainable Tourism" />
+                        <img src="images/blog/nyungwe forest.png" alt="Sustainable Tourism" />
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-date">July 15, 2025</span>
