--- a/blogs/kigali-city-guide.html
+++ b/blogs/kigali-city-guide.html
@@ -44,7 +44,7 @@
                     <span class="blog-category">City Guide</span>
                 </div>
                 <h1>Kigali: Africa's Cleanest Capital City</h1>
-                <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Kigali City" class="blog-featured-image">
+                <img src="../images/blog/kigali city.png" alt="Kigali City" class="blog-featured-image">
             </div>
 
             <div class="blog-post-content">
