--- a/blogs/lake-kivu-guide.html
+++ b/blogs/lake-kivu-guide.html
@@ -54,7 +54,7 @@
                     <span class="blog-category">Nature</span>
                 </div>
                 <h1>Lake Kivu: Rwanda's Hidden Gem</h1>
-                <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Lake Kivu" class="blog-featured-image">
+                <img src="../images/blog/lake kivu.png" alt="Lake Kivu" class="blog-featured-image">
             </div>
 
             <div class="blog-post-content">
