--- a/blogs/mount-karisimbi-guide.html
+++ b/blogs/mount-karisimbi-guide.html
@@ -54,7 +54,7 @@
                     <span class="blog-category">Adventure</span>
                 </div>
                 <h1>Conquering Mount Karisimbi: A Hiker's Paradise</h1>
-                <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Mountain Hiking" class="blog-featured-image">
+                <img src="../images/blog/mount karisimbi.png" alt="Mountain Hiking" class="blog-featured-image">
             </div>
 
             <div class="blog-post-content">
