--- a/blogs/nyungwe-forest-guide.html
+++ b/blogs/nyungwe-forest-guide.html
@@ -54,7 +54,7 @@
                     <span class="blog-category">Eco-Tourism</span>
                 </div>
                 <h1>Nyungwe Forest: Canopy Walk and Primate Tracking</h1>
-                <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Nyungwe Forest" class="blog-featured-image">
+                <img src="../images/blog/nyungwe forest.png" alt="Nyungwe Forest" class="blog-featured-image">
             </div>
 
             <div class="blog-post-content">
