--- a/blogs/rwanda-cultural-heritage.html
+++ b/blogs/rwanda-cultural-heritage.html
@@ -44,7 +44,7 @@
                     <span class="blog-category">Culture</span>
                 </div>
                 <h1>Rwanda's Rich Cultural Heritage: A Journey Through Time</h1>
-                <img src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Cultural Heritage" class="blog-featured-image">
+                <img src="../images/blog/rwanda rich cultural heritage.png" alt="Cultural Heritage" class="blog-featured-image">
             </div>
 
             <div class="blog-post-content">
