--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,8 @@
     <title>About Us - Nest Africa</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- WhatsApp Button Fix for cross-platform compatibility -->
+    <script src="whatsapp-fix.js"></script>
 </head>
 <body>
     <!-- Header -->
