--- a/blogs/kigali-city-guide.html
+++ b/blogs/kigali-city-guide.html
@@ -6,6 +6,8 @@
     <title>Kigali: Africa's Cleanest Capital City - Nest Africa Travels</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- WhatsApp Button Fix for cross-platform compatibility -->
+    <script src="../whatsapp-fix.js"></script>
 </head>
 <body>
     <!-- Header -->
