--- a/blogs/mount-karisimbi-guide.html
+++ b/blogs/mount-karisimbi-guide.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mount Karisimbi: A Hiker's Paradise - Nest Africa Travels</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- WhatsApp Button Fix for cross-platform compatibility -->
+    <script src="../whatsapp-fix.js"></script>
+</head>tml lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
