--- a/blogs/mount-karisimbi-guide.html
+++ b/blogs/mount-karisimbi-guide.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mount Karisimbi: A Hiker's Paradise - Nest Africa Travels</title>
+    
+    <!-- Comprehensive Favicon Setup -->
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <meta name="msapplication-TileImage" content="../apple-touch-icon.png">
+    <meta name="msapplication-TileColor" content="#2d5a27">
+    <meta name="theme-color" content="#2d5a27">
     <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- WhatsApp Button Fix for cross-platform compatibility -->
